[project]
name = "jaxsim_simulator"
dynamic = ["version"]
requires-python = ">= 3.10"
description="A wrapper for the JaxSim simulator to automate and simplify simulation creation."
authors = [
    { name = "Lorenzo Conti", email = "lorenzo.conti@iit.it" },
]
maintainers = [
    { name = "Lorenzo Conti", email = "lorenzo.conti@iit.it" },
]
license.file = "LICENSE"
dependencies = [
    "jaxsim > 0.3.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[build-system]
requires = [
    "setuptools >= 64.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = {file = "src/jaxsim_simulator/VERSION"}